Fix wrap

--- a/src/containers/MgmtHome/MgmtHome.module.scss
+++ b/src/containers/MgmtHome/MgmtHome.module.scss
@@ -135,7 +135,7 @@
 }
 
 .serviceTitle {
-  width: 100%;
+  max-width: 100%;
   margin: 30px 30px 10px;
   color: $pDarkBlue;
   font-size: 14px;
